# enforce_typehints

./: README.md  example.py  setup.cfg
src/: demo.py  enforcing.py  to_import.py
tests/: bad_test_case.py  good_test_case.py  test_import.py
typeforce/: enforcing.py
