[metadata]
name = typeforce
version=0.0.1
description = Enforce type hints at import time
python_requires = >= 3.10

[options]
# Requirements for install time.
# Note how to do python version-specific requirements
install_requires =
    mypy>=0.931

# How to locate the packages
packages = find:

# For data files like systemd services
include_package_data = False
