[metadata]
name = typeforce
version=0.0.1
description = Enforce type hints at import time
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >= 3.10
author_email = spider@skuggor.se
author = Spindel Ljungmark
url = https://github.com/Spindel/enforce_typehints
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
# Requirements for install time.
# Note how to do python version-specific requirements
install_requires =
    mypy>=0.931

# How to locate the packages
packages = find:

# For data files like systemd services
include_package_data = False
